# 1.Langgraph-AI

./: README.md  advanced_example.py
.github/: copilot-instructions.md
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
1.Basic/: .gitignore  TEST_RESULTS.md  TOOL_INTEGRATION_SUMMARY.md  langgraph.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
1.Basic/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_retry_counter.pckl
1.Basic/docs/: DIAGRAMS.md
1.Basic/notebooks/: test_data_transformer.ipynb
1.Basic/src/models/: __init__.py
1.Basic/src/nodes/: __init__.py  data_transformer.py
1.Basic/src/tools/: README.md  text_analyzer.py
1.Basic/tests/: test_tools.py
2.Router/: QUICK_START.md  STREAMLIT_README.md  TOOL_INTEGRATION.md  app.py  langgraph.json  main.py  requirements.txt
2.Router/.langgraph_api/: .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
2.Router/notebooks/: router.ipynb  test_workflow.ipynb
2.Router/src/: __init__.py
2.Router/src/models/: graph_state.py
2.Router/src/nodes/: __init__.py  input_node.py  output_node.py
2.Router/src/tools/: __init__.py  multiply.py
2.Router/src/workflows/: __init__.py
docs/: STRUCTURE.md
notebooks/: test_workflow.ipynb
src/: __init__.py  config.py
src/models/: graph_state.py
src/nodes/: input_processor.py  output_generator.py  tool_processor.py
src/tools/: __init__.py  math_calculator.py
src/workflows/: advanced_workflow.py  basic_workflow.py
tests/: test_integration.py  test_nodes.py  tool_example.py
